--- a/index.html
+++ b/index.html
@@ -25,42 +25,42 @@
 	<div class="red" data-aos="flip-up">s</div>
 	<div class="blue"data-aos="flip-up">s</div>
 	
+	<div class="red" data-aos="zoom-in-up">s</div>
+	<div class="blue"data-aos="zoom-in-up">s</div>
+	<div class="grey"data-aos="zoom-in-up">s</div>
 
-	<div class="red"	data-aos="flip-up">s</div>
-	<div class="blue"	data-aos="flip-up">s</div>
-	<div class="grey"	data-aos="flip-up">s</div>
-
-	<div class="blue"data-aos="flip-up">s</div>
-	<div class="grey"data-aos="flip-up">s</div>
-	<div class="red" data-aos="flip-up">s </div>
+	<div class="blue"data-aos="zoom-in">s</div>
+	<div class="grey"data-aos="zoom-in">s</div>
+	<div class="red" data-aos="zoom-in">s </div>
 	
-	<div class="grey"data-aos="flip-up">s</div>
-	<div class="red" data-aos="flip-up">s</div>
-	<div class="blue"data-aos="flip-up">s</div>
-	<div class="red" data-aos="flip-up">s</div>
-	<div class="blue"data-aos="flip-up">s</div>
-	<div class="grey"data-aos="flip-up">s</div>
+	<div class="grey"data-aos="fade-up">s</div>
+	<div class="red" data-aos="fade-up">s</div>
+	<div class="blue"data-aos="fade-up">s</div>
 
-	<div class="blue"data-aos="flip-up">s</div>
-	<div class="grey"data-aos="flip-up">s</div>
-	<div class="red" data-aos="flip-up">s</div>
+	<div class="red" data-aos="zoom-in-up">s</div>
+	<div class="blue"data-aos="zoom-in-up">s</div>
+	<div class="grey"data-aos="zoom-in-up">s</div>
+
+	<div class="blue"data-aos="zoom-in">s</div>
+	<div class="grey"data-aos="zoom-in">s</div>
+	<div class="red" data-aos="zoom-in">s </div>
 	
-	<div class="grey"data-aos="flip-up">s</div>
-	<div class="red" data-aos="flip-up">s</div>
-	<div class="blue"data-aos="flip-up">s</div>
+	<div class="grey"data-aos="fade-up">s</div>
+	<div class="red" data-aos="fade-up">s</div>
+	<div class="blue"data-aos="fade-up">s</div>
 	
 
-	<div class="red"	data-aos="flip-up">s</div>
-	<div class="blue"	data-aos="flip-up">s</div>
-	<div class="grey"	data-aos="flip-up">s</div>
+	<div class="red" data-aos="zoom-in-up">s</div>
+	<div class="blue"data-aos="zoom-in-up">s</div>
+	<div class="grey"data-aos="zoom-in-up">s</div>
 
-	<div class="blue"data-aos="flip-up">s</div>
-	<div class="grey"data-aos="flip-up">s</div>
-	<div class="red" data-aos="flip-up">s </div>
+	<div class="blue"data-aos="zoom-in">s</div>
+	<div class="grey"data-aos="zoom-in">s</div>
+	<div class="red" data-aos="zoom-in">s </div>
 	
-	<div class="grey"data-aos="flip-up">s</div>
-	<div class="red" data-aos="flip-up">s</div>
-	<div class="blue"data-aos="flip-up">s</div>
+	<div class="grey"data-aos="fade-up">s</div>
+	<div class="red" data-aos="fade-up">s</div>
+	<div class="blue"data-aos="fade-up">s</div>
 
 
 </div>
